<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background"
	android:paddingTop="?android:attr/actionBarSize"
	android:orientation="vertical"
	xmlns:app="http://schemas.android.com/apk/res-auto"


	>



	<View
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="0.1"
		/>
	<ImageView
		android:id="@+id/logoImg"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/logo1"
		android:gravity="center_horizontal|center_vertical"
		android:layout_gravity="center_horizontal|center_vertical"
		android:scaleType="fitXY"
		android:adjustViewBounds="true"
		android:layout_weight="1.38"
		android:background="@android:color/transparent"
		android:tint="@color/textColor"/>

	<View
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="0.5"
		/>




	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:clipToPadding="false"

		android:fillViewport="true"
		android:visibility="visible">

		<LinearLayout
			android:id="@+id/loginFormLayout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="bottom"
			android:gravity="bottom"
			android:orientation="vertical"
			android:padding="5dp"
			android:visibility="visible">



			<EditText
				android:id="@+id/loginUserMail"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal|center_vertical|center"
				android:gravity="center_horizontal|center_vertical|center"
				android:hint="user mail"
				android:imeOptions="actionNext"
				android:padding="10dp"
				android:textColor="@color/textColor"
				android:textColorHint="@color/white"
				android:textSize="16sp"
				android:theme="@style/EditTextStyle"
				android:maxLines="1"
				android:inputType="text"


				/>

			<EditText
				android:id="@+id/loginPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal|center_vertical"
				android:gravity="center_horizontal|center_vertical"
				android:hint="@string/loginUserPwdHint"
				android:imeOptions="actionDone"
				android:inputType="textPassword"
				android:padding="10dp"
				android:textColor="@color/textColor"
				android:textColorHint="@color/white"
				android:textSize="16sp"
				android:theme="@style/EditTextStyle"
				android:maxLines="1"
				/>

			<EditText
				android:id="@+id/ipAddress"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal|center_vertical"
				android:gravity="center_horizontal|center_vertical"
				android:hint="@string/ipAddress"
				android:padding="10dp"
				android:textColor="@color/textColor"
				android:textColorHint="@color/white"
				android:theme="@style/EditTextStyle"
				android:maxLines="1"
				android:inputType="text"
				/>

			<Button
				android:id="@+id/userLogin"
				android:layout_width="186dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center|center_horizontal|center_vertical"
				android:background="@drawable/round_corner_white_bg"
				android:gravity="center|center_horizontal|center_vertical"
				android:padding="10dp"
				android:text="@string/loginHeader"
				android:textAllCaps="false"
				android:textColor="@color/websiteHeader" />

			<TextView
				android:id="@+id/userForgotPassword"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center|center_horizontal|center_vertical"
				android:gravity="center_vertical|center_horizontal"
				android:padding="10dp"
				android:text="@string/forgotPassword"
				android:textColor="@color/textColor"
				android:textSize="16sp" />

		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:id="@+id/forgotPasswordLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		android:layout_weight="2"
		android:gravity="bottom"
		android:orientation="vertical"
		android:padding="5dp"
		android:visibility="gone">

		<TextView
			android:id="@+id/forgotUserMail"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center|center_horizontal|center_vertical"
			android:gravity="center|center_horizontal|center_vertical"
			android:padding="10dp"
			android:textColor="@color/textColor"
			android:textSize="16sp" />

		<EditText
			android:id="@+id/forgotOtp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|center_vertical"
			android:gravity="center_horizontal|center_vertical"
			android:hint="@string/verificiationCode"
			android:imeOptions="flagNoFullscreen"
			android:padding="10dp"
			android:textColor="@color/textColor"
			android:textColorHint="@color/textColor"
			android:textSize="16sp"
			android:theme="@style/EditTextStyle"
			android:maxLines="1"
			android:inputType="text"

			/>

		<EditText
			android:id="@+id/newPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|center_vertical"
			android:gravity="center_horizontal|center_vertical"
			android:hint="@string/setNewPassword"
			android:imeOptions="flagNoFullscreen"
			android:inputType="textPassword"
			android:padding="10dp"
			android:textColor="@color/textColor"
			android:textColorHint="@color/textColor"
			android:textSize="16sp"
			android:theme="@style/EditTextStyle"
			android:maxLines="1"



			/>

		<EditText
			android:id="@+id/confirmPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|center_vertical"
			android:gravity="center_horizontal|center_vertical"
			android:hint="@string/confirmPassword"
			android:imeOptions="flagNoFullscreen"
			android:inputType="textPassword"
			android:padding="10dp"
			android:textColor="@color/textColor"
			android:textColorHint="@color/textColor"
			android:textSize="16sp"
			android:theme="@style/EditTextStyle"
			android:maxLines="1"



			/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="5dp">

			<Button
				android:id="@+id/forgotPasswordSubmit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center|center_horizontal|center_vertical"
				android:layout_weight="0.2"
				android:background="@drawable/round_corner_white_bg"
				android:gravity="center|center_horizontal|center_vertical"
				android:text="@string/submit"
				android:textColor="@color/websiteHeader" />

			<TextView
				android:id="@+id/redirectLogin"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="0.1"
				android:gravity="center_vertical|center_horizontal"
				android:text="@string/loginHeader"
				android:textColor="@color/white" />
		</LinearLayout>

	</LinearLayout>
	<TextView
		android:id="@+id/copyright"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal|center_vertical"
		android:layout_gravity="center_horizontal|center_vertical"
		android:text="@string/copyrights"
		android:textColor="@color/white"
		android:layout_above="@+id/login"
		android:layout_alignParentBottom="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentEnd="true"
		android:textSize="10dp"
		android:padding="10dp"
		/>

</LinearLayout>
