<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <EditText 
	         android:id="@+id/registerOtp"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:hint="@string/verificiationCode"
	         android:inputType="number"
	         android:background="@drawable/rounded_edittext"
	         android:padding="10dp"
	         android:layout_marginStart="10dp"  
	         android:layout_marginLeft="10dp"
	         android:layout_marginTop="10dp"
	         android:layout_marginEnd="10dp"  
	         android:layout_marginRight="10dp"
	         android:textColor="@android:color/black" />
	    
     	<EditText 
	         android:id="@+id/registerPassword"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:hint="@string/setNewPassword"
	         android:inputType="textPassword"
	         android:background="@drawable/rounded_edittext"
	         android:padding="10dp"
	         android:layout_marginStart="10dp"  
	         android:layout_marginLeft="10dp"
	         android:layout_marginTop="10dp"
	         android:layout_marginEnd="10dp"  
	         android:layout_marginRight="10dp"
	         android:textColor="@android:color/black" />
     
     	<EditText 
	         android:id="@+id/confirmregisterPassword"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:hint="@string/confirmPassword"
	         android:inputType="textPassword"
	         android:background="@drawable/rounded_edittext"
	         android:padding="10dp"
	         android:layout_marginStart="10dp"  
	         android:layout_marginLeft="10dp"
	         android:layout_marginTop="10dp"
	         android:layout_marginEnd="10dp"  
	         android:layout_marginRight="10dp"
	         android:textColor="@android:color/black"  />
    

</LinearLayout>
